# FastAPI-demo-API-using-ML

./: frontend.py  main.py  model_building.ipynb  pyproject.toml  requirements.txt
