[project]
name = "fastapi-demo-pro-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair<5",
    "fastapi>=0.135.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.19.0",
    "uvicorn>=0.42.0",
]
